# snake-game

./: .clang-format  .clangd  .flake8  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  setup.sh  train.sh
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  build.sh  conf.py  index.rst
docs/api/: cpp_engine.rst  cpp_interface.rst  python_interface.rst
docs/doxygen_output/xml/: Bindings_8cpp.xml  Board_8cpp.xml  Board_8hpp.xml  CommandSocket_8cpp.xml  CommandSocket_8hpp.xml  Definitions_8hpp.xml  Doxyfile.xml  Game_8cpp.xml  Game_8hpp.xml  SharedMemoryManager_8cpp.xml  SharedMemoryManager_8hpp.xml  Snake_8cpp.xml  Snake_8hpp.xml  classSnakeGame_1_1Board.xml  classSnakeGame_1_1CommandSocket.xml  classSnakeGame_1_1Game.xml  classSnakeGame_1_1SharedMemoryManager.xml  classSnakeGame_1_1Snake.xml  dir_2052808828190f934b76e979ee65af8a.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_aebb8dcc11953d78e620bbef0b9e2183.xml  dir_ea91a2a72b7cbbf988d2bd2cd1d23e49.xml  dir_fc4c7f03e1a69a98c370fae55a743828.xml  index.xml  main_8cpp.xml  namespaceSnakeGame.xml  structSnakeGame_1_1GameSharedData.xml  structSnakeGame_1_1SharedMemoryData.xml  structSnakeGame_1_1StepResult.xml
include/: Board.hpp  CommandSocket.hpp  Game.hpp  Input.hpp  SharedMemoryManager.hpp  Snake.hpp  Training.hpp  Types.hpp
menu_and_animation/: game.py  menu.py  stats.py
py/: __init__.py  network_974 copy.json  snakeAgent.py  snakeGameController.py  snakeHeuristicController.py  snake_lib.pyi
py/interface/: SnakeGameController.py  heuristicController.py  main.py
py/models/: modelv2.keras  modelv3.keras  modelv4.keras  modelv5.keras
py/train/: requirements.txt  snake_env.cp312-win_amd64.pyd  train_dqn_linux.py  trainingv2-Dual-DQN.ipynb
py/training/: __init__.py  config.py  neural.py  training.py  utils.py  worker.py
py/training/models/: modelv1_10x10.json  modelv2_20x20.json  modelv3_20x20.json
snake_pygame/: README.md  SnakeGameController.py  main.py  setup.sh
src/: Board.cpp  CommandSocket.cpp  Game.cpp  Input.cpp  SharedMemoryManager.cpp  Snake.cpp  Training.cpp  bindings.cpp  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/bindings/: Bindings.cpp  CMakeLists.txt
src/core/: Board.cpp  Board.hpp  CMakeLists.txt  Definitions.hpp  Snake.cpp  Snake.hpp
src/engine/: CMakeLists.txt  Game.cpp  Game.hpp  Training.cpp  Training.hpp
src/network/: CMakeLists.txt  CommandSocket.cpp  CommandSocket.hpp  SharedMemoryManager.cpp  SharedMemoryManager.hpp
